# graph_to_agent

./: .dockerignore  .env.example  .firebaserc  .gitignore  .mailmap  .pre-commit-config.yaml  .secrets.baseline  20231117163236_advanced_adjacency_matrix.jsonl  4_test_20231120.jsonl  AgentPool.py  Dockerfile  Makefile  OPEN_SOURCE_AUDIT.md  PrivatChatInterpretation.py  README.md  README_FIREBASE.md  SECURITY.md  Vision.md  agents_graph_app.py  app.py  audio_graph_app.py  build_based_on_nested_json.py  docker-compose.yml  draft.txt  env_problems.puml  eula.txt  get_schema.py  pyproject.toml  requirements.txt  test.jsonl  test.mmd  try_celery.py  v1_bq_to_gpt4.py
.github/: dependabot.yml  dependapot.yml
.github/workflows/: ci.yml  release.yml
READ_ME/: Vision.md  finance_model.mmd  homo_demens.mmd  homo_deomons.mmd  status_quo_way_20231122.puml  sync_with_linked_in_article.md  video_agenda.md
app/: BigQueryHandler.py  Solver.py  __init__.py  app.py  requirements.txt
app/LoggerPublisher/: MainLogger.py  MainPublisher.py  __init__.py
app/static/: styles.css
app/static/js/: graph_operations.js
app/templates/: index.html
assets/: recorder.js
controllers/: AgentAssistantExtension.py  AnswerPatternProcessor.py  AppOrchestrator.py  BigQueryHandler.py  BlueprintDesigner.py  CloudRunSpecifcInMemoryOpenAiKeyHandeling.py  CloudRunSpecificInMemoryOpenAiKeyHandling.py  EngineRoom.py  EnhancedGptTranslator.py  GptAgentInteractions.py  GptInteractions.py  GraphPatternProcessor.py  GraphToGptTranslator.py  MatchedGPTCallsHandler.py  Matrix3D.py  MatrixLayerOne.py  MatrixLayerTwo.py  UnmatchedGPTCallsHandler.py  VarIdentificationProcess.py  VariableConnectedComponentsProcessor.py  __init__.py  config.py  debugging_stats_engine.py  v1GraphPatternProcessor.py  v2GptAgentInteractions.py  v2Matrix3D.py  v2MatrixLayerOne.py
controllers/legacy/: GptAgentInteractions.py  MatchedGPTCallsHandler.py  MatrixLayerTwo.py  Solver.py
data_science/: graph_to_agent_20231114 (4).ipynb  graph_to_agent_20231114.ipynb
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: GRAPH_TO_AGENT_VS_MIROFISH.md  LINKEDIN_RESPONSE.md  PREDICTION_VS_SIMULATION_RESPONSE.md
examples/: basic_agent_chain.py  expert_wirebox.py
functions/: README.md  main.py  requirements.txt
functions/controllers/: AppOrchestrator.py  FirestoreHandler.py
legacy/: BlueprintDesigner.py  EnhancedGptTranslator.py  GraphToGptTranslator.py  PreVarIdentificationProcess.py  Solver.py  class_app.py  v2Matrix3D.py
logger/: CustomLogger.py  __init__.py
logics/: TranslatorGraphToGpt.py  eg_vis_graph_to_gpt.jsonl  embeddings.csv  puml_agent.py
proposal/: .~lock.v1_proposal_20231104.pdf#  document.aux  document.blg  document.out  document.tex  document.toc  references.bib  v1_proposal_20231104.aux  v1_proposal_20231104.blg  v1_proposal_20231104.tex
public/: index.html
public/static/js/: GraphUI.js  createConnectAgents.js
scripts/: deploy.sh
sql_queries/: __init__.py  adjacency_matrix_query.py  confusion_matrix_query.py  edges_query.py  find_variable_layer.py  gpt_call_blueprint.py  layer_find_variable.py  nodes_query.py  q_one_matrix_layer_two.py  q_three_matrix_layer_two.py  q_two_matrix_layer_two.py
src/graph_to_agent/: __init__.py
src/graph_to_agent/agents/: __init__.py  openai.py
src/graph_to_agent/core/: __init__.py  engine.py  (+2 more)
static/: styles.css
static/js/: GraphUI.js  graph_operations.js  recorder.js  singlePrompt.js
templates/: .disagreement_page.html.swp  audio.html  base_template.html  disagreement_page.html  eula_agreement.html  graph.html  impressum.html  index.html
tests/: __init__.py  test_engine_room.py
trash/: instr.txt
(+10 files in other folders)
